Added bet placing
